
Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v8.2.0
======

- WL#15664: Add support for Python 3.12
- WL#15623: Improve the authentication module
- WL#15218: Support WebAuthn authentication
- BUG#35547876: C/Python 8.1.0 type check build fails in the pb2 branch
- BUG#35544123: Kerberos unit tests configuration is outdated

v8.1.0
======

- WL#15749: Remove DMG and MSI support
- WL#15672: Upgrade Python Protobuf version to 4.21.12
- WL#15630: Remove Python 3.7 support
- WL#15629: Add OpenTelemetry tracing
- WL#15591: Improve the network module
- BUG#35425076: Fix deallocating None error
- BUG#35349093: Compression doesn't work with C extension API
- BUG#35338384: PIP installs incompatible Connector/Python packages
- BUG#35318413: Fix charset mapping for MySQL 8.1.0
- BUG#35278365: Fix UnicodeDecodeError with a long field name alias (c-ext)
- BUG#35212199: Check for identifier quotes in the database name
- BUG#35140271: Regex split hanging in cursor.execute(..., multi=True) for complex queries
- BUG#29115406: CONTRIBUTION - FIX RECV COMPRESS BUG

v8.0.33
=======

- WL#15528: Add docker build/test support for existing server
- WL#15483: Support OCI ephemeral key-based authentication
- WL#15435: Improve the logging system
- WL#15401: Support for type hints in module mysqlx
- BUG#35233031: Connector/Python should not default to mysql_native_password
- BUG#35015758: COM_QUIT should not be called in the connection phase
- BUG#34984850: Fix binary conversion with NO_BACKSLASH_ESCAPES mode
- BUG#31355895: Fix slow executemany() with insert statements
- BUG#30103652: Connector/Python ClientFlag SESION_TRACK is a misspelling
- BUG#27489972: Several COM_% commands have been deprecated
- BUG#27359063: Support for dictionary, named_tuple, and raw to prepared statements cursor
- BUG#21476351: Too small chunks when sending huge parameters with COM_STMT_SEND_LONG_DATA

v8.0.32
=======

- WL#15348: Support MIT Kerberos library on Windows